# osip

./: .cproject  .gitignore  .indent.pro  .project  AUTHORS  BUGS  ChangeLog  FEATURES  INSTALL  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  autogen.sh  bootstrap  config.h.in  configure  configure.ac  configure.in  libosip.spec  libosip2.pc.in  makedef.vxw  makefile.mai  osip-config.h  osip-config.h.in  tst  tst_sdp
conf/: Makefile.am  Makefile.in  froms.txt  siprc  siprc2  torture_msgs  torture_sdps  tos.txt  urls.txt  vias.txt
debian/: README.Debian  changelog  conffiles.ex  control  copyright  docs  libosip-dev.dirs  libosip-dev.files  manpage.sgml.ex  rules  shlibs.local
doc/: Makefile.am  Makefile.in  chapter1.sgml  chapter2.sgml  chapter3.sgml  chapter4.sgml  chapter5.sgml  osip.html  osip.sgml
example/: Makefile.am  Makefile.in  app.c  app.h  appua.h  example_agentlogic.c  example_callbackuas.c  example_rcfile.c  example_rcfile.h  msg_ack.c  msg_bye.c  msg_register.c  port_net.c  transaction_mt.c  udp_send.c
example_mt/: Makefile.am  Makefile.in  example_callbackuac.c  example_design.c  makefile.vxw  msg_cancel.c  msg_invite.c  udp_listen.c
fsm/: Makefile.am  Makefile.in  dialog.c  evt_server.c  fsm.h  fsm_misc.c  fsm_uac4inv.c  fsm_uac4req.c  fsm_uas4inv.c  fsm_uas4req.c  ict.c  ict_fsm.c  ist.c  ist_fsm.c  makefile.vxw  nict.c  nict_fsm.c  nist.c  nist_fsm.c  osip.c  port_fifo.c  port_sema.c  port_thread.c  sdp_negoc.c  sipevent.c  transaction.c  trn_manager.c  trn_timers.c
help/: INSTALL.wince  Makefile.am  Makefile.in
help/doxygen/: DoxyFile  Makefile.am  Makefile.in  ht0-initialize.dox  ht2-parser.dox  ht3-fsm.dox  ht4-dialog.dox  ht5-sdp.dox
help/man/: Makefile.am  Makefile.in  osip.html  osip.sgml
include/: Makefile.in
include/osip2/: Makefile.am  Makefile.in  doc.h  doxygen.dox.in  internal.h  osip.h  osip_condv.h  osip_dialog.h  osip_fifo.h  osip_mt.h  osip_negotiation.h  osip_time.h
include/osipparser2/: Makefile.in  internal.h  osip_body.h  osip_const.h  osip_headers.h  osip_list.h  osip_md5.h  osip_message.h  osip_parser.h  osip_port.h  osip_rfc3264.h  osip_uri.h  sdp_message.h
include/osipparser2/headers/: Makefile.am  Makefile.in  osip_accept.h  osip_accept_encoding.h  osip_accept_language.h  osip_alert_info.h  osip_allow.h  osip_authentication_info.h  osip_authorization.h  osip_call_id.h  osip_call_info.h  osip_contact.h  osip_content_disposition.h  osip_content_encoding.h  osip_content_length.h  osip_content_type.h  osip_cseq.h  osip_error_info.h  osip_from.h  osip_header.h  osip_mime_version.h  osip_proxy_authenticate.h  osip_proxy_authentication_info.h  osip_proxy_authorization.h  osip_record_route.h  osip_route.h  osip_to.h  osip_via.h  osip_www_authenticate.h
ltib/: libosip2GIP.spec  mymake
osip/: Makefile.am  Makefile.in  const.h  dialog.h  fifo.h  global.h  list.h  md5.h  osip.h  port.h  sdp.h  sdp_negoc.h  sema.h  smsg.h  smsgtypes.h  thread.h  timers.h  types.h  ua.h  urls.h
parser/: Makefile.am  Makefile.in  hdr_accept.c  hdr_acceptencoding.c  hdr_acceptlanguage.c  hdr_alertinfo.c  hdr_allow.c  hdr_authorization.c  hdr_body.c  hdr_callid.c  hdr_callinfo.c  hdr_contact.c  hdr_contentdisposition.c  hdr_contentencoding.c  hdr_contentlength.c  hdr_contenttype.c  hdr_cseq.c  hdr_encryption.c  hdr_errorinfo.c  hdr_from.c  hdr_headers.c  hdr_mimeversion.c  hdr_proxyauthenticate.c  hdr_proxyauthorization.c  hdr_recordroute.c  hdr_route.c  hdr_to.c  hdr_via.c  hdr_wwwauthenticate.c  makefile.vxw  md5c.c  msg.h  msg_cparser.c  msg_parser.c  msg_read.c  msg_write.c  port_list.c  port_malloc.c  port_misc.c  sdp_accessor.c  (+2 more)
platform/: Makefile.am  Makefile.in
platform/debian/: Makefile.am  changelog  copyright
platform/rpm/: Makefile.am  Makefile.in  libosip.spec
platform/vsnet/: Makefile.am  Makefile.in  osip.sln  osip2.def  osip2.vcproj  osip2.vcxproj  osip2fsm.vcproj  osip2parser.vcproj  osipparser2.def  osipparser2.vcproj  osipparser2.vcxproj
platform/wince/: Makefile.am  osip2.vcp  osip2.vcproj  osipparser2.vcp  osipparser2.vcproj
platform/windows/: Makefile.am  osip2.def  osip2.dsp  osipparser2.def  osipparser2.dsp
scripts/: Makefile.am  Makefile.in  mkinstalldirs
src/: Makefile.in
src/osip2/: Makefile.am  Makefile.in  fsm.h  fsm_misc.c  ict.c  ict_fsm.c  ist.c  ist_fsm.c  nict.c  nict_fsm.c  nist.c  nist_fsm.c  osip.c  osip_dialog.c  osip_event.c  osip_negotiation.c  osip_time.c  osip_transaction.c  port_condv.c  port_fifo.c  port_sema.c  port_thread.c  xixt.h
src/osipparser2/: Makefile.am  Makefile.in  osip_accept.c  osip_accept_encoding.c  osip_accept_language.c  osip_alert_info.c  osip_allow.c  osip_authentication_info.c  osip_authorization.c  osip_body.c  osip_call_id.c  osip_call_info.c  osip_contact.c  osip_content_disposition.c  osip_content_encoding.c  osip_content_length.c  osip_content_type.c  osip_cseq.c  osip_error_info.c  osip_from.c  osip_header.c  osip_list.c  osip_md5c.c  osip_message.c  osip_message_parse.c  osip_message_to_str.c  osip_mime_version.c  osip_parser_cfg.c  osip_port.c  osip_proxy_authenticate.c  osip_proxy_authentication_info.c  osip_proxy_authorization.c  osip_record_route.c  osip_rfc3264.c  osip_rfc3264i.h  osip_route.c  osip_to.c  osip_uri.c  osip_via.c  osip_www_authenticate.c  (+3 more)
src/test/: Makefile.am  Makefile.in  tcallid.c  tcontact.c  tcontentt.c  tfrom.c  torture.c  torture_rfc3264.c  torture_sdp.c  trecordr.c  troute.c  tst  tst_rfc3264  tst_sdp  tto.c  turls.c  tvia.c  twwwa.c
src/test/res/: Makefile.am  sip50  sip56  sip57  sip60  sip61  sip62  sip64  sip77  torture_msgs  urls.txt
test/: Makefile.am  Makefile.in  makefile.vxw  tcallid.c  tcontact.c  tcontentt.c  tfrom.c  torture.c  torture_sdp.c  trecordr.c  troute.c  tto.c  turls.c  tvia.c  twwwa.c
windows/: Makefile.am  Makefile.in  README  osipfsm.def  osipfsm.dsp  osipfsm.dsw  osipparser.def  osipparser.dsp  osipparser.dsw  sipfsm.dsp  sipfsm.dsw  sipparser.dsp  sipparser.dsw  ua.dsp  ua.dsw
